--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_GATEWAY_URL=https://backend.maxbit-dev.com/gw
+REACT_APP_BASE_GATEWAY_URL=http://localhost:8000/
+REACT_APP_HOST_URL=http://localhost:3000/
