--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.23.0",
     "react-i18next": "^11.15.3",
     "react-phone-input-2": "^2.14.0",
+    "react-qr-code": "^2.0.9",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
